--- a/Index.css
+++ b/Index.css
@@ -18,6 +18,7 @@
     font-size: 17px;
 }
 
+
 .navbar a:hover {
     background-color: rgb(83, 12, 35);
     color: rgb(50, 127, 182);
@@ -32,7 +33,20 @@
     background-image: url('background_picture.jpg');
     background-position: center;
 }
-
+/*button page up */
+.button {
+    margin-right: 15%;
+    background-color:green;
+    color:white;
+    padding: 5px 10px;
+    text-align: center;
+    font-size: 18px;
+    border-style: solid;
+    border-radius: 10%;
+    border-color: black;
+    float: right;
+    text-decoration: none; 
+}
 /* Foot definition */
 .foot {
     font-family: Brush Script MT”;
